--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 --------------------------------------------------------------------------------
+v1.0.1
+--------------------------------------------------------------------------------
+* Fixed issue on windows from v1.0.0
+
+
+
+--------------------------------------------------------------------------------
 v1.0.0
 --------------------------------------------------------------------------------
 * Project created
